--- a/backend/AdminDashboard.Api/Dockerfile
+++ b/backend/AdminDashboard.Api/Dockerfile
@@ -1,10 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-COPY AdminDashboard.Api.csproj ./
+COPY AdminDashboard.Api.csproj .
 RUN dotnet restore
 
-COPY . ./
+COPY . . 
 RUN dotnet publish -c Release -o /app/publish
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
@@ -15,4 +15,5 @@ ENV ASPNETCORE_URLS=http://+:8080
 EXPOSE 8080
 
 ENTRYPOINT ["dotnet", "AdminDashboard.Api.dll"]
+
 
