update connection string for deploy

--- a/backend/AdminDashboard.Api/appsettings.json
+++ b/backend/AdminDashboard.Api/appsettings.json
@@ -13,5 +13,7 @@
     "Audience": "AdminDashboardUsers"
   },
   
-  "ConnectionStrings": { "PostgresConnection": "Host=localhost;Port=5434;Database=admin_db;Username=postgres;Password=Password2!" }
+ "ConnectionStrings": {
+  "PostgresConnection": "Host=admin-db;Port=5432;Database=admin_db;Username=postgres;Password=Password2!"
+}
 }
