--- a/backend/AdminDashboard.Api/appsettings.json
+++ b/backend/AdminDashboard.Api/appsettings.json
@@ -14,6 +14,6 @@
   },
   
  "ConnectionStrings": {
-  "PostgresConnection": "Host=admin-db;Port=5432;Database=admin_db;Username=postgres;Password=Password2!"
+  "PostgresConnection": "Host=interchange.proxy.rlwy.net;Port=20537;Database=railway;Username=postgres;Password=qjJCOuhYTOxGTuEXJylPVnUKTUpgXSKp"
 }
 }
